# rootcause

./: .gitignore  .tombi.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  clippy.toml  deny.toml  flake.nix
.github/: dependabot.yml
.github/instructions/: rootcause.instructions.md  rust.instructions.md
.github/workflows/: discord.yml  rust.yml  semver-checks.yml
examples/: README.md  anyhow_interop.rs  anyhow_migration.rs  async.rs  basic.rs  batch_processing.rs  boxed_error_interop.rs  conditional_formatting.rs  context_methods.rs  custom_attachments.rs  custom_errors.rs  custom_handler.rs  derive_more_interop.rs  error_chains.rs  error_coercion.rs  error_hierarchy.rs  error_stack_interop.rs  eyre_interop.rs  following_error_sources.rs  formatting_hooks.rs  inspecting_errors.rs  iterator_ext.rs  lazy_evaluation.rs  readme-example.rs  report_creation_hook.rs  retry_with_collection.rs  sync.rs  thiserror_interop.rs  typed_reports.rs
examples/anyhow_migration/: stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs
rootcause/: Cargo.toml
rootcause-backtrace/: Cargo.toml  README.md  build.rs
rootcause-backtrace/src/: lib.rs
rootcause-internals/: Cargo.toml  README.md
rootcause-internals/src/: handlers.rs  lib.rs  util.rs
rootcause-internals/src/attachment/: data.rs  mod.rs  raw.rs  vtable.rs
rootcause-internals/src/report/: data.rs  mod.rs  raw.rs  vtable.rs
rootcause-internals/tests/: integration_tests.rs
rootcause-opentelemetry/: Cargo.toml
rootcause-opentelemetry/src/: lib.rs  separate.rs  single.rs  types.rs
rootcause-preformat/: Cargo.toml  README.md
rootcause-preformat/src/: lib.rs  preformatted.rs
rootcause-tracing/: Cargo.toml  README.md
rootcause-tracing/examples/: tracing_spans.rs
rootcause-tracing/src/: lib.rs
rootcause/examples/: async.rs  sync.rs
rootcause/src/: into_report.rs  iterator_ext.rs  lib.rs  macros.rs  markers.rs  preformatted.rs  prelude.rs  result_ext.rs  util.rs
rootcause/src/hooks/: attachment_hooks.rs  context_hooks.rs  hook_lock.rs  report_creation.rs  report_formatting.rs
rootcause/src/hooks/attachment_collectors/: backtrace.rs  location.rs
rootcause/src/report/: iter.rs  mod.rs  mut_.rs  owned.rs  ref_.rs
rootcause/src/report_attachment/: owned.rs  ref_.rs
rootcause/src/report_attachments/: iter.rs  mut_.rs  owned.rs  ref_.rs
rootcause/src/report_collection/: iter.rs  mut_.rs  owned.rs  ref_.rs
src/: anyhow_compat.rs  format_helpers.rs  handlers.rs  into_report.rs  iterator_ext.rs  lib.rs  macros.rs  markers.rs  option_ext.rs  preformatted.rs  prelude.rs  report_conversion.rs  result_ext.rs  util.rs
src/compat/: anyhow.rs  anyhow1.rs  boxed_error.rs  error_stack.rs  error_stack05.rs  error_stack06.rs  error_stack07.rs  eyre.rs  eyre06.rs  mod.rs
src/hooks/: attachment_formatter.rs  attachment_hooks.rs  context_formatter.rs  context_hooks.rs  hook_lock.rs  mod.rs  report_creation.rs  report_formatter.rs  report_formatting.rs
src/hooks/attachment_collectors/: backtrace.rs  location.rs  mod.rs
src/hooks/builtin_hooks/: backtrace.rs  location.rs  mod.rs  report_formatter.rs
src/hooks/formatting_overrides/: attachment.rs  context.rs  mod.rs
src/hooks/handler_overrides/: attachment.rs  context.rs  mod.rs
src/report/: iter.rs  mod.rs  mut_.rs  owned.rs  ref_.rs
src/report_attachment/: mod.rs  mut_.rs  owned.rs  ref_.rs
src/report_attachments/: iter.rs  mod.rs  mut_.rs  owned.rs  ref_.rs
src/report_collection/: iter.rs  mod.rs  mut_.rs  owned.rs  ref_.rs
tests/: attachment_parent.rs
