[package]
name = "rootcause-preformat"
version = "0.13.0"
edition = "2024"
license = "MIT/Apache-2.0"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "ergonomic", "library", "preformat"]
description = "Preformatting support for the rootcause error reporting library"
repository = "https://github.com/rootcause-rs/rootcause"
documentation = "https://docs.rs/rootcause-preformat"
rust-version = "1.89"

[dependencies]

# Internal dependencies
rootcause = { path = "../", version = "=0.13.0" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(nightly_extra_checks)'] }
