[package]
name = "rootcause"
version = "0.2.0"
edition = "2024"
license = "MIT/Apache-2.0"
description = "A flexible, ergonomic, and inspectable error reporting library for Rust"
repository = "https://github.com/rootcause-rs/rootcause"

[dependencies]
backtrace = { version = "0.3.75", optional = true, features = ["cpp_demangle"] }
rootcause-internals = { path = "../rootcause-internals", version = "0.2.0" }
hashbrown = "0.15.5"
indexmap = { version = "2.10.0", default-features = false }
regex = { version = "1.12.2", optional = true }
spin = "0.10.0"
triomphe = { version = "0.1.14", default-features = false, features = [
  "unsize",
] }
unsize = "1.1.0"

[dev-dependencies]
static_assertions = "1.1.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = ["std"]
# default = ["backtrace", "indexmap/std", "triomphe/std"]
# default = []
std = ["indexmap/std", "triomphe/std"]
backtrace = ["dep:backtrace", "dep:regex", "std"]
